load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@com_github_buildbarn_bb_storage_npm//:defs.bzl", "npm_link_all_packages")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
# gazelle:prefix github.com/buildbarn/bb-storage
# gazelle:resolve go github.com/google/go-jsonnet @google_jsonnet_go//:go_default_library
# gazelle:resolve proto build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto
# gazelle:resolve proto go build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution
# gazelle:resolve proto go google/bytestream/bytestream.proto @org_golang_google_genproto_googleapis_bytestream//:bytestream
# gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status
# gazelle:resolve proto go opentelemetry/proto/common/v1/common.proto @io_opentelemetry_go_proto_otlp//common/v1:common
# gazelle:resolve proto google/bytestream/bytestream.proto @googleapis//google/bytestream:bytestream_proto
# gazelle:resolve proto google/protobuf/duration.proto @protobuf//:duration_proto
# gazelle:resolve proto google/protobuf/empty.proto @protobuf//:empty_proto
# gazelle:resolve proto google/protobuf/struct.proto @protobuf//:struct_proto
# gazelle:resolve proto google/protobuf/timestamp.proto @protobuf//:timestamp_proto
# gazelle:resolve proto google/protobuf/wrappers.proto @protobuf//:wrappers_proto
# gazelle:resolve proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto opentelemetry/proto/common/v1/common.proto @opentelemetry-proto//:common_proto
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

npm_link_all_packages(
    name = "node_modules",
)
