load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tools",
    srcs = ["deps.go"],
    importpath = "github.com/buildbarn/bb-storage/tools",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@cc_mvdan_gofumpt//:gofumpt",
        "@com_github_bazelbuild_buildtools//buildifier",
        "@org_golang_x_lint//:lint",
    ],
)

# When built with --stamp, creates a non-deterministic output file for pushing images to a remote registry.
# With --nostamp, produces a deterministic output so dependents get cache hits.
expand_template(
    name = "stamped_tags",
    out = "_stamped.tags.txt",
    stamp_substitutions = {"_TAG_": "{{BUILD_SCM_TIMESTAMP}}-{{BUILD_SCM_REVISION}}"},
    substitutions = {"_TAG_": "0.0.0"},
    template = ["_TAG_"],
    visibility = ["//visibility:public"],
)
