load("//tools/oci:push.bzl", "oci_push_official")
load("//tools/oci:go_image.bzl", "go_image_index")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_copy_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_copy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/replication",
        "//pkg/digest",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_copy",
        "//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_copy",
    embed = [":bb_copy_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image_index(
    name = "bb_copy_image",
    embed = [":bb_copy_lib"],
    pure = "on",
    platforms = [
        "linux/amd64",
        "linux/arm64"
    ],
    visibility = ["//visibility:public"],
)

oci_push_official(
    name = "bb_copy_image_push",
    component = "bb-copy",
    image = ":bb_copy_image",
)
