load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools:container.bzl", "container_push_official", "multiarch_go_image")

go_library(
    name = "bb_copy_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_copy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/replication",
        "//pkg/digest",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_copy",
        "//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_copy",
    embed = [":bb_copy_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_copy_container",
    binary = ":bb_copy",
)

container_push_official(
    name = "bb_copy_container_push",
    component = "bb-copy",
    image = ":bb_copy_container",
)
