load("//tools/oci:push.bzl", "oci_push_official")
load("//tools/oci:go_image.bzl", "go_image_index")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_replicator_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_replicator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/replication",
        "//pkg/global",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_replicator",
        "//pkg/proto/replicator",
        "//pkg/util",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_replicator",
    embed = [":bb_replicator_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image_index(
    name = "bb_replicator_image",
    embed = [":bb_replicator_lib"],
    pure = "on",
    platforms = [
        "linux/amd64",
        "linux/arm64"
    ],
    visibility = ["//visibility:public"],
)

oci_push_official(
    name = "bb_replicator_image_push",
    component = "bb-replicator",
    image = ":bb_replicator_image",
)
