load("//tools/oci:push.bzl", "oci_push_official")
load("//tools/oci:go_image.bzl", "go_image_index")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")


go_library(
    name = "bb_storage_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_storage",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth",
        "//pkg/blobstore",
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/grpcservers",
        "//pkg/builder",
        "//pkg/capabilities",
        "//pkg/global",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_storage",
        "//pkg/proto/fsac",
        "//pkg/proto/icas",
        "//pkg/proto/iscc",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_storage",
    embed = [":bb_storage_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image_index(
    name = "bb_storage_image",
    embed = [":bb_storage_lib"],
    pure = "on",
    platforms = [
        "linux/amd64",
        "linux/arm64"
    ],
    visibility = ["//visibility:public"],
)

oci_push_official(
    name = "bb_storage_image_push",
    component = "bb-storage",
    image = ":bb_storage_image",
)
