load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools:container.bzl", "container_push_official", "multiarch_go_image")

go_library(
    name = "bb_storage_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_storage",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth",
        "//pkg/auth/configuration",
        "//pkg/blobstore",
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/grpcservers",
        "//pkg/builder",
        "//pkg/capabilities",
        "//pkg/global",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_storage",
        "//pkg/proto/fsac",
        "//pkg/proto/icas",
        "//pkg/proto/iscc",
        "//pkg/util",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_storage",
    embed = [":bb_storage_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_storage_container",
    binary = ":bb_storage",
)

container_push_official(
    name = "bb_storage_container_push",
    component = "bb-storage",
    image = ":bb_storage_container",
)
